[gd_scene load_steps=8 format=2]

[ext_resource path="res://_tests/test_lod/test_lod.gd" type="Script" id=1]
[ext_resource path="res://assets/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="CylinderMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
top_radius = 0.8
bottom_radius = 0.5
height = 3.0
radial_segments = 64
rings = 4

[sub_resource type="SphereShape" id=3]

margin = 0.04
radius = 1.0

[sub_resource type="SphereMesh" id=4]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
radius = 0.1
height = 0.2
radial_segments = 64
rings = 32
is_hemisphere = false

[sub_resource type="BoxShape" id=5]

margin = 0.04
extents = Vector3( 5, 5, 5 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." groups=[
"in",
]]
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 5.0
lod_min_hysteresis = 0.0
lod_max_distance = 10.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="." groups=[
"out",
]]
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 10.0
lod_min_hysteresis = 0.0
lod_max_distance = 20.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.55124 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 2 )
enabled = true
mouse_mode = 2
mouselook = true
sensitivity = 0.5
smoothness = 0.5
privot = null
distance = 5.0
rotate_privot = false
collisions = true
yaw_limit = 360
pitch_limit = 360
movement = true
acceleration = 0.5
deceleration = 0.5
max_speed = Vector3( 1, 1, 1 )
local = true
forward_action = "ui_up"
backward_action = "ui_down"
left_action = "ui_left"
right_action = "ui_right"
up_action = "ui_page_up"
down_action = "ui_page_down"
ui_mlook = "ui_mlook"
use_gui = true
gui_action = "ui_cancel"

[node name="Area" type="Area" parent="Camera"]
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Camera/Area"]
shape = SubResource( 3 )
disabled = false

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.834511, 0, 0.550991, 0, 1, 0, -0.550991, 0, 0.834511, 1.9945, 1.55495, 3.59668 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 5.0
spot_attenuation = 1.0
spot_angle = 45.0
spot_angle_attenuation = 1.0

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = null

[node name="Area" type="Area" parent="."]
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )
disabled = false

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
